# nanoserve

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/: README.md
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  service.yaml  servicemonitor.yaml
docs/: BENCHMARK_MATRIX.md  PORTFOLIO_PROOF.md  SCHEDULER_AND_BATCHING.md
examples/: openai_client.py
ops/: README.md  observe.sh  prometheus.docker.yml  prometheus.yml
prompts/: bench_prompts.jsonl
prompts/eval/: ppl_fixture.txt
results/: ablations.csv  eval.csv
results/runs/: 20260422T062850Z_hf_mps_fp16_poisson.json  20260422T063250Z_llama_cpp_Q8_0_poisson.json  20260422T063417Z_llama_cpp_Q4_K_M_poisson.json  20260422T065350Z_hf_mps_fp16_closed-loop.json  20260422T203331Z_nanoserve_fp16_closed-loop.json  (+20 more)
scripts/: benchmark_matrix.py  debug_l3.py  download_models.sh  parity_test.py  run_phase2b_sweep.sh  run_phase3_sweep.sh  run_phase3b_sweep.sh  run_phase3c_sweep.sh  run_phase5b_sweep.sh  run_phase6a_sweep.sh
tests/: test_benchmark_matrix.py  test_cli_smoke.py  test_engine_eos_retirement.py  test_engine_parity_l1.py  test_engine_parity_l2.py  test_engine_parity_l3.py  test_engine_parity_l3_var.py  test_engine_parity_l4_quant.py  test_engine_parity_l4_quant_int4.py  test_engine_parity_l5_prefix.py  test_eval.py  test_metrics.py  test_prefix_cache.py  test_quant_int4.py  test_scheduler.py  test_server_api.py  test_server_metrics.py  test_workload.py
ui/: index.html
(+30 files in other folders)
