[project]
name = "nanoserve"
version = "0.0.1"
description = "from-scratch llm inference server for apple silicon"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "torch>=2.6,<2.9",
    "torchao>=0.6,<0.10",
    "transformers>=4.44",
    "accelerate>=0.33",
    "sentencepiece>=0.2",
    "numpy>=1.26",
    "pydantic>=2.8",
    "typer>=0.12",
    "rich>=13.7",
    "psutil>=6.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
eval = [
    "datasets>=3.0",
]
mlx = [
    "mlx>=0.24",
    "mlx-lm>=0.21",
]

[project.scripts]
nanoserve = "nanoserve.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
